# r_website_backend

./: .gitignore  pyproject.toml
mysite/: db.sqlite3
mysite/blog_markdowns/: 0.md  Neuromorphic_computing.md  naturaleza.md  physics_nobel_prize.md
mysite/blogapi/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/blogapi/migrations/: 0001_initial.py  0002_auto_20200907_2125.py  0003_blogpostpreview_md_file.py  0004_blogpostpreview_md_text.py
mysite/mysite/: settings.py  urls.py
mysite/posts/: 0.md
